check modelling part

--- a/endnote.bib
+++ b/endnote.bib
@@ -1758,7 +1758,7 @@ Publisher: American Psychological Association},
 	issn = {1939-1455(Electronic),0033-2909(Print)},
 	doi = {10.1037/bul0000026},
 	shorttitle = {Attentional bias for positive emotional stimuli},
-	abstract = {Despite an initial focus on negative threatening stimuli, researchers have more recently expanded the investigation of attentional biases toward positive rewarding stimuli. The present meta-analysis systematically compared attentional bias for positive compared with neutral visual stimuli across 243 studies (N = 9,120 healthy participants) that used different types of attentional paradigms and positive stimuli. Factors were tested that, as postulated by several attentional models derived from theories of emotion, might modulate this bias. Overall, results showed a significant, albeit modest (Hedgesâ g = .258), attentional bias for positive as compared with neutral stimuli. Moderator analyses revealed that the magnitude of this attentional bias varied as a function of arousal and that this bias was significantly larger when the emotional stimulus was relevant to specific concerns (e.g., hunger) of the participants compared with other positive stimuli that were less relevant to the participantsâ concerns. Moreover, the moderator analyses showed that attentional bias for positive stimuli was larger in paradigms that measure early, rather than late, attentional processing, suggesting that attentional bias for positive stimuli occurs rapidly and involuntarily. Implications for theories of emotion and attention are discussed. ({PsycINFO} Database Record (c) 2016 {APA}, all rights reserved)},
+	abstract = {Despite an initial focus on negative threatening stimuli, researchers have more recently expanded the investigation of attentional biases toward positive rewarding stimuli. The present meta-analysis systematically compared attentional bias for positive compared with neutral visual stimuli across 243 studies (N = 9,120 healthy participants) that used different types of attentional paradigms and positive stimuli. Factors were tested that, as postulated by several attentional models derived from theories of emotion, might modulate this bias. Overall, results showed a significant, albeit modest (Hedges's g = .258), attentional bias for positive as compared with neutral stimuli. Moderator analyses revealed that the magnitude of this attentional bias varied as a function of arousal and that this bias was significantly larger when the emotional stimulus was relevant to specific concerns (e.g., hunger) of the participants compared with other positive stimuli that were less relevant to the participants' concerns. Moreover, the moderator analyses showed that attentional bias for positive stimuli was larger in paradigms that measure early, rather than late, attentional processing, suggesting that attentional bias for positive stimuli occurs rapidly and involuntarily. Implications for theories of emotion and attention are discussed. ({PsycINFO} Database Record (c) 2016 {APA}, all rights reserved)},
 	pages = {79--106},
 	number = {1},
 	journaltitle = {Psychological Bulletin},
@@ -1975,4 +1975,52 @@ Publisher: Nature Publishing Group},
 	year = {2016},
 	keywords = {optimality, diffusion model, response time, nonstationarity},
 	pages = {260--281},
+}
+
+@article{hafri_perception_2021,
+	title = {The {Perception} of {Relations}},
+	volume = {25},
+	issn = {1364-6613},
+	url = {https://www.sciencedirect.com/science/article/pii/S1364661321000085},
+	doi = {10.1016/j.tics.2021.01.006},
+	language = {en},
+	number = {6},
+	urldate = {2022-12-15},
+	journal = {Trends in Cognitive Sciences},
+	author = {Hafri, Alon and Firestone, Chaz},
+	month = jun,
+	year = {2021},
+	keywords = {visual psychophysics, compositionality, core cognition, intuitive physics, role-binding, structured representations},
+	pages = {475--492},
+}
+
+@article{shadlen_decision_2016,
+	title = {Decision {Making} and {Sequential} {Sampling} from {Memory}},
+	volume = {90},
+	issn = {0896-6273},
+	url = {http://www.sciencedirect.com/science/article/pii/S0896627316301234},
+	doi = {10.1016/j.neuron.2016.04.036},
+	language = {en},
+	number = {5},
+	urldate = {2020-07-04},
+	journal = {Neuron},
+	author = {Shadlen, Michael N. and Shohamy, Daphna},
+	month = jun,
+	year = {2016},
+	pages = {927--939},
+}
+
+
+@misc{Hu_hitchhikers_2022,
+	title = {A {Hitchhiker}’s {Guide} to {Bayesian} {Hierarchical} {Drift}-{Diffusion} {Modeling} with {dockerHDDM}},
+	copyright = {All rights reserved},
+	url = {https://psyarxiv.com/6uzga/},
+	doi = {10.31234/osf.io/6uzga},
+	language = {en-us},
+	urldate = {2022-11-01},
+	publisher = {PsyArXiv},
+	author = {Chuan-Peng, Hu and Geng, Haiyang and Zhang, Lei and Fengler, Alexander and Frank, Michael and Zhang, Ru-Yuan},
+	month = nov,
+	year = {2022},
+	keywords = {Neuroscience, Cognitive Neuroscience, Computational Neuroscience, Reproducibility, Docker, Python, Bayesian hierarchical modeling, HDDM, drift-diffusion models},
 }
