--- a/general_method.rmd
+++ b/general_method.rmd
@@ -1,6 +1,6 @@
 # General methods
 ## Design and Procedure
-This series of experiments used the social associative learning paradigm (or tagging paradigm, see @Sui_2012_JEPHPP), in which participants first learned the associations between geometric shapes and labels of person with different moral character (e.g., in first three studies, the triangle, square, and circle and good person, neutral person, and bad person, respectively). The associations of the shapes and label were counterbalanced across participants. After remembered the associations, participants finished a practice phase to familiar with the task, in which they viewed one of the shapes upon the fixation while one of the labels below the fixation and judged whether the shape and the label matched the association they learned. When the overall accuracy reached 60% or higher at the end of the practicing session, participants proceeded to the experimental task, which was the same as in the practice phase. Otherwise, they will finish another practices session.
+This series of experiments used the social associative learning paradigm (or tagging paradigm, see @Sui_2012_JEPHPP), in which participants first learned the associations between geometric shapes and labels of person with different moral characters (e.g., in first three studies, the triangle, square, and circle and good person, neutral person, and bad person, respectively). The associations of the shapes and labels were counterbalanced across participants. After remembered the associations, participants finished a practice phase to familiar with the task, in which they viewed one of the shapes above the fixation while one of the labels below the fixation and judged whether the shape and the label matched the association they learned. When the overall accuracy reached 60% or higher at the end of the practicing session, participants proceeded to the experimental task, which was the same as in the practice phase. Otherwise, they finished more practices sessions until the overall accuracy was equal or greater than 60%.
 
 Experiment 1a, 1b, 1c, 2, 5, and 6a were design to explore and validate the effect of moral character on perceptual matching. These experiments shared a 2 (matching: match vs. nonmatch) by 3 (moral character: good vs. neutral vs. bad person) within-subject design. Experiment 1a was the first one of the whole series studies, which revealed a prioritization of good character. Experiment 1b, 1c, and 2 followed to confirm that it is the moral character that caused the effect. More specifically, experiment 1b used different Chinese words as labels to test whether the effect only occurred with certain words. Experiment 1c manipulated the moral valence indirectly: participants first learned to associate different moral behaviors with different Chinese names, after remembered the association, they then performed the perceptual matching task by associating names with different shapes. Experiment 2 further tested whether the way we presented the stimuli influence the effect of valence, by sequentially presenting labels and shapes instead of simultaneously. Note that a few participants in experiment 2 also participated experiment 1a because we originally planned a cross task comparison. Experiment 5 was designed to compare the effect size of moral character and other importance social evaluative dimensions (aesthetics and emotion). Different social evaluative dimensions were implemented in different blocks, the moral character blocks shared the design of experiment 1a. Experiment 6a, which shared the same design as experiment 2, was an EEG experiment which aimed at exploring the neural correlates of the effect. But we will focus on the behavioral results of experiment 6a in the current manuscript.
 
@@ -20,10 +20,10 @@ We used the Bayesian hierarchical model (BHM, or Bayesian generalized linear mix
 
 We used the `r` package `BRMs` [@Bürkner_2017], which used Stan [@Carpenter_2017_stan] as backend, for the BHM analyses. We estimated the over-all effect across experiments that aimed at testing the same effect, instead of a two-step approach where we reporting the value of parameters, e.g., $d'$, for each experiment, and then synthesizing the overall effect by random effect model meta-analyses [e.g., @Goh_2016_mini]. More specifically, a three-level model is used to estimate the overall effect of good-person on perceptual matching, which include data from five experiments: 1a, 1b, 1c, 2, 5, and 6a. Similarly, a three-level HBM model is used for all experiments that testing the modulation effect of self-referential on the prioritization of good person , including experiment 3a, 3b, and 6b. Results of individual experiment can be found in the supplementary results. For experiment 4a and 4b, which tested the spontaneous binding between self and good-person, we used HBM for each experiment separately. 
 
-### Accuracy
-We followed previous studies [@Hu_2020_GoodSelf; @Sui_2012_JEPHPP] and used signal detection theory approach to analyze the accuracy data. More specifically, the match trials are treated as signal and non-match trials are noise. The sensitivity and criterion of signal detection theory are modeled through BHM [@Rouder_2005_BHM_SDT]. 
+### Response
+We followed previous studies [@Hu_2020_GoodSelf; @Sui_2012_JEPHPP] and used signal detection theory approach to analyze the response data. More specifically, the match trials are treated as signal and non-match trials are noise. The sensitivity and criterion of signal detection theory are modeled through BHM [@Rouder_2005_BHM_SDT]. 
 
-We used the Bernoulli distribution for the signal detection theory. The probability that the $j$th subject responded "match" ($y_{ij} = 1$) at the $i$th trial $p_{ij}$ is distributed as a Bernoulli disitriubtion with parameter $p_{ij}$:
+We used the Bernoulli distribution for the signal detection theory. The probability that the $j$th subject responded "match" ($y_{ij} = 1$) at the $i$th trial $p_{ij}$ is distributed as a Bernoulli distribution with parameter $p_{ij}$:
 
 $$ y_{ij} \sim Bernoulli(p_{ij})$$
 The reparameterized value of $p_{ij}$ is a linear regression of the independent variables:
@@ -39,7 +39,7 @@ $$ \begin{bmatrix}\beta_{0j}\\
 
 In `BRMs`, we used the following formula for the first set of experiments, which have a 2 (matching: match vs. non-match) by 3 (moral character: good vs. neutral vs. bad) within-subject design, i.e., experiment 1a, 1b, 1c, 2, 5, and 6a:
 
-`saymatch ~ 0 + Valence + Valence:ismatch + (0 + Valence + Valence:ismatch | Subject), family = bernoulli(link="probit")`
+`saymatch ~ 0 + Valence + Valence:ismatch + (0 + Valence + Valence:ismatch | Subject) + (0 + Valence + Valence:ismatch | ExpID_new:Subject) , family = bernoulli(link="probit")`
 
 For experiments that had two by two by three design, we used the follow formula for the BGLM:
 
