--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -263,40 +263,28 @@ We used the \texttt{tidyverse} of r (see script \texttt{Load\_save\_data.r}) to 
 
 We used the Bayesian hierarchical model (BHM, or Bayesian generalized linear mixed models, Bayesian multilevel models) to model the reaction time and accuracy data, because BHM provided three advantages over the classic NHST approach (repeated measure ANOVA or \emph{t}-tests). First, BHM estimates the posterior distributions of parameters for statistical inference, therefore provided uncertainty in estimation (Rouder \& Lu, 2005). Second, BHM, where generalized linear mixed models could be easily implemented, can use distributions that fit the distribution of real data instead of using normal distribution for all data. Using appropriate distributions for the data will avoid misleading results and provide better fitting of the data. For example, Reaction times are not normally distributed but right skewed, and the linear assumption in ANOVAs is not satisfied (Rousselet \& Wilcox, 2019). Third, BHM provides an unified framework to analyze data from different levels and different sources, avoid the information loss when we need to combine data from different levels.
 
-We used the \texttt{r} package \texttt{BRMs} (\textbf{Bürkner\_2017?}), which used Stan (Carpenter et al., 2017) for the BHM analyses. We estimated the over-all effect across experiments with similar experimental design, instead of using a two-step approach where we first estimate parameters, e.g., \(d'\) for each participant, and then use a random effect model meta-analysis to synthesize the effect (e.g., Goh, Hall, \& Rosenthal, 2016).
+We used the \texttt{r} package \texttt{BRMs} (\textbf{Bürkner\_2017?}), which used Stan (Carpenter et al., 2017) as backend, for the BHM analyses. We estimated the over-all effect across experiments that aimed at testing the same effect, instead of a two-step approach where we reporting the value of parameters, e.g., \(d'\), for each experiment, and then synthesizing the overall effect by random effect model meta-analyses (e.g., Goh, Hall, \& Rosenthal, 2016). More specifically, a three-level model is used to estimate the overall effect of good-person on perceptual matching, which include data from five experiments: 1a, 1b, 1c, 2, 5, and 6a. Similarly, a three-level HBM model is used for all experiments that testing the modulation effect of self-referential on the prioritization of good person , including experiment 3a, 3b, and 6b. Results of individual experiment can be found in the supplementary results. For experiment 4a and 4b, which tested the spontaneous binding between self and good-person, we used HBM for each experiment separately.
 
 \hypertarget{accuracy}{%
 \subsubsection{Accuracy}\label{accuracy}}
 
-We followed previous studies (Hu, Lan, Macrae, \& Sui, 2020; Sui et al., 2012) and used signal detection theory approach to analyze the accuracy data. More specifically, the match trials are treated as signal and the non-match trials are noise. The sensitivity and criterion of signal detection theory by BHM (Rouder \& Lu, 2005). Because the BHM can model different level's data using a single unified model, we used a three-level HBM to model prioritization effect of good-person, which include data from five experiments: 1a, 1b, 1c, 2, 5, and 6a. Similarly, we modeled experiments with both self-referential and moral character with a three-level HBM model, which includes 3a, 3b, and 6b. For experiment 4a and 4b, we used two-level models for each separately. However, we could compare the posterior of parameters directly because we have full posterior distribution of parameters.
+We followed previous studies (Hu, Lan, Macrae, \& Sui, 2020; Sui et al., 2012) and used signal detection theory approach to analyze the accuracy data. More specifically, the match trials are treated as signal and non-match trials are noise. The sensitivity and criterion of signal detection theory are modeled through BHM (Rouder \& Lu, 2005).
 
-We used the Bernoulli distribution to model the accuracy data. For a single participant, we assume that the accuracy of \(i\)th trial is Bernoulli distributed (binomial with 1 trial), with probability \(p_{i}\) that \(y_{i} = 1\).
-
-\[ y_{i} \sim Bernoulli(p_{i})\]
-and the probability of choosing ``match'' \(p_{i}\) at the \(i\)th trial is a function of the trial type:
-
-\[ \Phi(p_{i}) =  \beta_{0} + \beta_{1}IsMatch_{i}\]
-therefore, the outcomes \(y_{i}\) are 0 if the participant responded ``nonmatch'' on the \(i\)th trial, 1 if they responded ``match''. We then write the generalized linear model on the probits (z-scores; \(\Phi\), ``Phi'') of \(p\)s. \(\Phi\) is the cumulative normal density function and maps \(z\) scores to probabilities. In this way, the intercept of the model (\(\beta_0\)) is the standardized false alarm rate (probability of saying 1 when predictor is 0), which we take as our criterion \(c\). The slope of the model (\(\beta_1\)) is the increased probability of responding ``match'' when the trial type is ``match'', in \(z\)-scores, which is another expression of \(d'\). Therefore, \(c\) = -\(z\)HR = \(-\beta_0\), and \(d' = \beta_1\).
-
-In our experimental design, there are three conditions for both match and non-match trials, we can estimate the \(d'\) and \(c\) separately for each condition. In this case, the criterion \(c\) is modeled as the main effect of valence, and the \(d'\) can be modeled as the interaction between valence and match:
-
-\[ \Phi(p_{i}) = 0 + \beta_{0}Valence_{i} + \beta_{1}IsMatch_{i}  * Valence_{i} \]
-
-In each experiment, we had multiple participants. We can estimate the group-level parameters by extending the above model into a two-level model, where we can estimate parameters on individual level (varying effect) and the group level parameter simultaneously (fixed effect). The probability that the \(j\)th subject responded ``match'' (\(y_{ij} = 1\)) at the \(i\)th trial \(p_{ij}\). In the same vein, we have
+We used the Bernoulli distribution for the signal detection theory. The probability that the \(j\)th subject responded ``match'' (\(y_{ij} = 1\)) at the \(i\)th trial \(p_{ij}\) is distributed as a Bernoulli disitriubtion with parameter \(p_{ij}\):
 
 \[ y_{ij} \sim Bernoulli(p_{ij})\]
-The the generalized linear model can be re-written to include two levels:
+The reparameterized value of \(p_{ij}\) is a linear regression of the independent variables:
 \[ \Phi(p_{ij}) = 0 + \beta_{0j}Valence_{ij} + \beta_{1j}IsMatch_{ij} * Valence_{ij}\]
-We again can write the generalized linear model on the probits (z-scores; \(\Phi\), ``Phi'') of \(p\)s.
+where the probits (z-scores; \(\Phi\), ``Phi'') of \(p\)s is used for the regression.
 
-The subjective-specific intercepts (\(\beta_{0} = -zFAR\)) and slopes (\(\beta_{1} = d'\)) are describe by multivariate normal with means and a covariance matrix for the parameters.
+The subjective-specific intercepts (\(\beta_{0} = -zFAR\)) and slopes (\(\beta_{1} = d'\)) are described by multivariate normal with means and a covariance matrix for the parameters.
 \[ \begin{bmatrix}\beta_{0j}\\
 \beta_{1j}\\
 \end{bmatrix} \sim N(\begin{bmatrix}\theta_{0}\\
 \theta_{1}\\
 \end{bmatrix}, \sum) \]
 
-For experiments that had 2 (matching: match vs.~non-match) by 3 (moral character: good vs.~neutral vs.~bad), i.e., experiment 1a, 1b, 1c, 2, 5, and 6a, the formula for accuracy in \texttt{BRMs} is as follow:
+In \texttt{BRMs}, we used the following formula for the first set of experiments, which have a 2 (matching: match vs.~non-match) by 3 (moral character: good vs.~neutral vs.~bad) within-subject design, i.e., experiment 1a, 1b, 1c, 2, 5, and 6a:
 
 \texttt{saymatch\ \textasciitilde{}\ 0\ +\ Valence\ +\ Valence:ismatch\ +\ (0\ +\ Valence\ +\ Valence:ismatch\ \textbar{}\ Subject),\ family\ =\ bernoulli(link="probit")}
 
@@ -323,16 +311,13 @@ and the experiment level parameter \(mu_{0k}\) and \(mu_{1k}\) is from a higher 
 \end{bmatrix} \sim N(\begin{bmatrix}\mu_{0}\\
 \mu_{1}\\
 \end{bmatrix}, \sum)\]
-in which \(mu_{0}\) and \(mu_{1}\) means the population level parameter.
+in which \(mu_{0}\) and \(mu_{1}\) are the population level parameters.
 
 \hypertarget{reaction-times}{%
 \subparagraph{Reaction times}\label{reaction-times}}
 
-For the reaction time, we used the log normal distribution (\url{https://lindeloev.github.io/shiny-rt/\#34_(shifted)_log-normal}) to model the data. This means that we need to estimate the posterior of two parameters: \(\mu\), \(\sigma\). \(\mu\) is the mean of the \texttt{logNormal} distribution, and \(\sigma\) is the disperse of the distribution. Although the log normal distribution can be extended to shifted log normal distribution, with one more parameter: shift, which is the earliest possible response, we found that the additional parameter didnt' improved the model fitting and therefore used the log nomral in our final analysis.
-
-The reaction time of the \(j\)th subject on \(i\)th trial is a linear function of trial type: \[y_{ij} = \beta_{0j} + \beta_{1j}*IsMatch_{ij} * Valence_{ij}\]
-
-while the log of the reaction time is log-normal distributed:
+We used log-normal distribution (\url{https://lindeloev.github.io/shiny-rt/\#34_(shifted)_log-normal}) to model the data. This means that we need to estimate the posterior of two parameters: \(\mu\), \(\sigma\). \(\mu\) is the mean of the \texttt{logNormal} distribution, and \(\sigma\) is the disperse of the distribution.
+The reaction time of the \(j\)th subject on \(i\)th trial is log-normal distributed:
 \[ log(y_{ij}) \sim N(\mu_{j}, \sigma_{j})\]
 \(y_{ij}\) is the RT of the \(i\)th trial of the \(j\)th participants.
 
@@ -343,14 +328,14 @@ while the log of the reaction time is log-normal distributed:
 \theta_{1}\\
 \end{bmatrix}, \sum) \]
 
-\[\sigma_{j} \sim HalfCauchy()\]
+\[\sigma_{j} \sim HalfNormal()\]
 Formula used for modeling the data as follow:
 
-\texttt{RT\_sec\ \textasciitilde{}\ Valence*ismatch\ +\ (Valence*ismatch\ \textbar{}\ Subject),\ family\ =\ lognormal()}
+\texttt{RT\_sec\ \textasciitilde{}\ 1\ +\ Valence*ismatch\ +\ (Valence*ismatch\ \textbar{}\ Subject),\ family\ =\ lognormal()}
 
 or
 
-\texttt{RT\_sec\ \textasciitilde{}\ ID*Valence*ismatch\ +\ (ID*Valence*ismatch\ \textbar{}\ Subject),\ family\ =\ lognormal()}
+\texttt{RT\_sec\ \textasciitilde{}\ 1\ +\ ID*Valence*ismatch\ +\ (ID*Valence*ismatch\ \textbar{}\ Subject),\ family\ =\ lognormal()}
 
 we expanded the RT model three-level model in which participants and experiments are two group level variable and participants were nested in the experiments.
 
@@ -359,7 +344,7 @@ we expanded the RT model three-level model in which participants and experiments
 \(y_{ijk}\) is the RT of the \(i\)th trial of the \(j\)th participants in the \(k\)th experiment.
 
 \[\log(y_{ijk}) \sim N(\mu_{jk}, \sigma_{jk})\]
-\[\sigma_{jk} \sim HalfCauchy()\]
+\[\sigma_{jk} \sim HalfNormal()\]
 \[\mu_{jk} = \beta_{0jk} + \beta_{1jk}*IsMatch_{ijk} * Valence_{ijk} \]
 \[\beta_{jk} \sim N(\mu_{j}, \sigma_j)\]
 
@@ -376,8 +361,8 @@ We estimated the effect size of \(d'\) and RT from experiment 1a, 1b, 1c, 2, 5, 
 
 We also estimated the interaction between moral character and self-referential process, which included results from experiment 3a, 3b, and 6b. Using three-level models, we tested two possible explanations for the prioritization of good character: valence effect or self-referential based prioritization.
 
-\hypertarget{spontaenous-binding-between-self-and-good-person}{%
-\subsubsection{Spontaenous binding between self and good person}\label{spontaenous-binding-between-self-and-good-person}}
+\hypertarget{spontaneous-binding-between-self-and-good-person}{%
+\subsubsection{Spontaneous binding between self and good person}\label{spontaneous-binding-between-self-and-good-person}}
 
 In the third part, we focused on experiment 4a and 4b, which were designed to examine two more nuanced explanation concerning the good-self. The design of experiment 4a and 4b are complementary. Together, they can test whether participants are more sensitive to the moral character of the Self (4a), or the identity of the good character (4b).
 
@@ -448,16 +433,16 @@ The same trend appeared for the RT data. For shapes associated with good person,
 \hypertarget{discussion}{%
 \section{Discussion}\label{discussion}}
 
-{[}Summary of results{]} Across nine experiments, we explored the prioritization effect of moral character and the underlying mechanism by a combination of social associative learning and perceptual matching task. We found robust effect that good character was prioritized in the shape-label matching task, regardless how good character was represented (single word or behavioral description). Moreover, the prioritization of good character was not driven by valence itself, i.e., ``good'' vs ``bad''. Instead, this effect was modulated by a self-referential processing: prioritization only occurred when moral characters are self-referential (experiments \ldots). Finally, the prioritization of good character was modulated by self-referential information even when either the self- or character- related information was irrelevant to experimental task (experiment 4a and 4b). In contrast, when good character became other-referential, even implicitly, the performance was worse thant other-referential neutral character. Together, these findings highlight the importance of the self in perceiving more character information, contribute to a growing literature on the social nature of perception (Freeman, Stolier, \& Brooks, 2020; Xiao, Coppin, \& Bavel, 2016) by supporting the idea that people prioritize socially salient stimuli.
+{[}Summary of results{]} Across nine experiments, we explored the prioritization effect of moral character and the underlying mechanism by a combination of social associative learning and perceptual matching task. We found robust effect that good character was prioritized in the shape-label matching task, regardless how good character was represented (single word or behavioral description). Moreover, the prioritization of good character was not driven by valence itself, i.e., ``good'' vs ``bad''. Instead, this effect was modulated by a self-referential processing: prioritization only occurred when moral characters are self-referential (experiments 3a, 3b, and 6b). Finally, the prioritization of good character was modulated by self-referential information even when either the self- or character- related information was irrelevant to experimental task (experiment 4a and 4b). In contrast, for other referential condition, explicitly or implicitly, the performance of good character was worse than neutral character. Together, these results highlighted the importance of the self in perceiving more character information, suggested a spontaneous self-referential process when moral character is involved in perceptual decision-making. These results contribute to a growing literature on the social and relational nature of perception {[}Xiao, Coppin, and Bavel (2016); Freeman, Stolier, and Brooks (2020); hafri\_perception\_2021{]}.
 
-{[}Effect of good character{]} The robust effect of the prioritization of good character provide solid evidence for the effect of moral character on perceptual decision-making. Previous research reported the effect of morality on perception but the results and the mechanisms were disputed. For example, (E. Anderson et al., 2011) reported that faces associated with bad social behavior capture attention more rapidly, however, independent team failed to replicate the effect (Stein et al., 2017). Another studies by Gantman and Van Bavel (2014) found that moral words are more likely to be judged as words when it was presented subliminally, however, this effect may caused by semantic priming instead of morality (Firestone \& Scholl, 2015; Jussim, Crawford, Anglin, Stevens, \& Duarte, 2016). In the current study, we used associative learning task which allow us to eliminate the semantic priming: (1) we only use a few pairs of stimuli; (2) the stimuli that used to represent moral character are neutral stimuli. Moreover, the moral character information can be learned by typical moral behavioral instead of moral character label. The effect was replicated in all five different samples further confirmed that the prioritization effect of good character found in our paradigm is robust.
+{[}Effect of good character{]} The evidence for the effect of moral character on perceptual decision-making is robust in our study. Previous studies reported the effect of morality on perception but the results and the mechanisms were disputed. For example, (E. Anderson et al., 2011) reported that faces associated with bad social behavior capture attention more rapidly, however, an independent team failed to replicate the effect (Stein et al., 2017). Another studies by Gantman and Van Bavel (2014) found that moral words are more likely to be judged as words when it was presented subliminally, however, this effect may caused by semantic priming instead of morality (Firestone \& Scholl, 2015; Jussim, Crawford, Anglin, Stevens, \& Duarte, 2016). In the current study, the associative learning task allowed us to eliminate the semantic priming. First, only a few pairs of stimuli was used and different stimuli were different in many dimensions, makes it impossible for priming between them. Second, stimuli that used to represent moral character are neutral stimuli before the associative learning. Moreover, in experiment 1c where participants first associate moral behaviors with neutral names and then paired names with neutral shapes, we still found that effect of moral character. The effect was replicated in eight different samples in the first experiments further confirmed that the prioritization effect of good character found in our paradigm is robust.
 
-The prioritization of good character, however, is different previous moral perception studies which reported a negativity effect, i.e., information related to bad moral character are processed better (E. Anderson et al., 2011; Eiserbeck \& Abdel Rahman, 2020). For instance, E. Anderson et al. (2011) reported the faces associated with negative social behaviors dominated the awareness for longer time than those associated with neutral or positive behaviors. This difference may resulted from the differences in the task, while in many previous moral perception studies, the participants were asked to detect the existence of a stimuli, while the current task participants need to recognize the stimuli and perform the matching task. That said, previous studies targeted the early stage of perception while the current task focus more on the decision-making at relative later stage of information processing. The positivity occur at later stage while the negativity effect occur at early stage of information process had been reported in affective stimuli as well (Pool et al., 2016).
+Previous moral perception studies usually reported a negativity effect, i.e., information related to bad moral character are processed better (E. Anderson et al., 2011; Eiserbeck \& Abdel Rahman, 2020). For instance, E. Anderson et al. (2011) reported the faces associated with negative social behaviors dominated the awareness for longer time than those associated with neutral or positive behaviors. This discrepancy between previous results and the current study may resulted from differences in the task: while in many previous moral perception studies, the participants were asked to detect the existence of a stimuli, the current task asked participants to recognize a pattern. In other words, previous studies targeted early stages of perception while the current task focus more on the decision-making at relative later stage of information processing. This discrepancy is consistent with the pattern found in studies with emotional stimuli (Pool et al., 2016).
 
-{[}Self-binding as a novel explanation and consistent with broader theory about morality{]} We further tested whether prioritization effect of moral character was due to purely valence or because of spontaneous self-referential processing. Our results revealed that prioritization of good character is modulated by self-relatedness of the character information: when the good character was prioritized when it was related to self, even when the self-relatedness was task irrelevant. By contrast, when good character information was no longer prioritized when it was associated with non-self. These results echo prior research on moral-self view (Freitas, Cikara, Grossmann, \& Schlegel, 2017; Strohminger et al., 2017), suggesting that the central role of moral-self to our participants is not only at self-report level but also at perceptual level.
+{[}Self-binding as a novel explanation{]} We expanded previous moral perception studies by examining two possible explanations of the prioritization of good character: valence effect or self-referential process. Our results revealed that prioritization of good character is modulated by self-relatedness of the character information: when the good character was prioritized when it was related to self, even when the self-relatedness was task irrelevant. By contrast, when good character information was no longer prioritized when it was associated with non-self. The modulation effect of self-referential process was large when the relationship between moral character and the self was explicit. More importantly, the effect persisted when the relationship between moral character and the self information was implicit, suggesting a spontaneous self-referential when both information were presented. An possible explanation for this spontaneous self-referential of good character is that moral-self is central to our identity (Freitas, Cikara, Grossmann, \& Schlegel, 2017; Strohminger et al., 2017) and the motivation to maintain a moral-self view also influenced the perceptual decision-making.
 
 {[}Beyond the debate about penetration of perception{]}
-Instead of claiming the moral-self motivation \emph{penetrates} perception, we argue that perceptual decision-making process include more processes than just encoding the sensory inputs. In other words, we are not against or for one side of the cognition-penetration debate (Firestone \& Scholl, 2016). Instead, we suggest to further develop computational models better account the nuance of behavioral data and/or related data collected from other modules. For example, sequential sampling models suggest that, when making a perceptual decision, the agent is continuously accumulate evidence until the amount of evidence passed a threshold, then a decision is made (Forstmann, Ratcliff, \& Wagenmakers, 2016; Ratcliff, Smith, Brown, \& McKoon, 2016). In these models, the evidence, or decision variable, can accumulate from both sensory information but also memory {[}{]}. Recently applications of sequential sample model to perceptual matching tasks also suggest that different processes may contributed to the prioritization effect of self (Golubickis et al., 2017) or good self (Hu et al., 2020). Similarly, reinforcement learning models also revealed that the key difference between self- and other-referential learning lies in the learning rate (Lockwood et al., 2018). These studies suggest that more specified computational models are need to disentangle the cognitive processes underlying the prioritization of good character.
+Although the results here revealed prioritization of good character in perceptual decision-making, we did not claim that the moral-self motivation \emph{penetrates} perception. Perceptual decision-making process include processes more than just encoding the sensory inputs, we need more computational models that can account the nuance of behavioral data and/or related data collected from other modules. For example, sequential sampling models suggest that, when making a perceptual decision, the agent is continuously accumulate evidence until the amount of evidence passed a threshold, then a decision is made (Chuan-Peng et al., 2022; Forstmann, Ratcliff, \& Wagenmakers, 2016; Ratcliff, Smith, Brown, \& McKoon, 2016). In these models, the evidence, or decision variable, can accumulate from both sensory information but also memory (Shadlen \& Shohamy, 2016). Recently, applications of sequential sample model to perceptual matching tasks also suggest that different processes may contributed to the prioritization effect of self (Golubickis et al., 2017) or good self (Hu et al., 2020). Similarly, reinforcement learning models also revealed that the key difference between self- and other-referential learning lies in the learning rate (Lockwood et al., 2018). These studies suggest that computational models are need to disentangle the cognitive processes underlying the prioritization of good character.
 
 \hypertarget{references}{%
 \section{References}\label{references}}
@@ -489,6 +474,9 @@ Baumeister, R. F., Bratslavsky, E., Finkenauer, C., \& Vohs, K. D. (2001). Bad i
 \leavevmode\vadjust pre{\hypertarget{ref-Carpenter_2017_stan}{}}%
 Carpenter, B., Gelman, A., Hoffman, M. D., Lee, D., Goodrich, B., Betancourt, M., \ldots{} Riddell, A. (2017). Stan: A probabilistic programming language {[}Journal Article{]}. \emph{Journal of Statistical Software}, \emph{76}(1). \url{https://doi.org/10.18637/jss.v076.i01}
 
+\leavevmode\vadjust pre{\hypertarget{ref-Hu_hitchhikers_2022}{}}%
+Chuan-Peng, H., Geng, H., Zhang, L., Fengler, A., Frank, M., \& Zhang, R.-Y. (2022). \emph{A {Hitchhiker}'s {Guide} to {Bayesian} {Hierarchical} {Drift}-{Diffusion} {Modeling} with {dockerHDDM}}. PsyArXiv. \url{https://doi.org/10.31234/osf.io/6uzga}
+
 \leavevmode\vadjust pre{\hypertarget{ref-dunbar_gossip_2004}{}}%
 Dunbar, R. I. M. (2004). Gossip in evolutionary perspective. \emph{Review of General Psychology}, \emph{8}(2), 100--110. \url{https://doi.org/10.1037/1089-2680.8.2.100}
 
@@ -500,9 +488,6 @@ Ellemers, N. (2018). Morality and social identity. In M. van Zomeren \& J. F. Do
 
 \leavevmode\vadjust pre{\hypertarget{ref-firestone_cognition_2015}{}}%
 Firestone, C., \& Scholl, B. J. (2015). Enhanced visual awareness for morality and pajamas? Perception vs. Memory in "top-down" effects. \emph{Cognition}, \emph{136}, 409--416. \url{https://doi.org/10.1016/j.cognition.2014.10.014}
-
-\leavevmode\vadjust pre{\hypertarget{ref-firestone_bbs_2016}{}}%
-Firestone, C., \& Scholl, B. J. (2016). Cognition does not affect perception: {Evaluating} the evidence for "top-down" effects. \emph{Behavioral and Brain Sciences}, \emph{39}, e229. \url{https://doi.org/10.1017/S0140525X15000965}
 
 \leavevmode\vadjust pre{\hypertarget{ref-fiske_attention_1980}{}}%
 Fiske, S. T. (1980). Attention and weight in person perception: The impact of negative and extreme behavior. \emph{Journal of Personality and Social Psychology}, \emph{38}(6), 889--906. \url{https://doi.org/10.1037/0022-3514.38.6.889}
@@ -560,6 +545,9 @@ Rouder, J. N., \& Lu, J. (2005). An introduction to bayesian hierarchical models
 
 \leavevmode\vadjust pre{\hypertarget{ref-Rousselet_2019}{}}%
 Rousselet, G. A., \& Wilcox, R. R. (2019). Reaction times and other skewed distributions: Problems with the mean and the median {[}Preprint{]}. \emph{Meta-Psychology}. \url{https://doi.org/10.1101/383935}
+
+\leavevmode\vadjust pre{\hypertarget{ref-shadlen_decision_2016}{}}%
+Shadlen, M. N., \& Shohamy, D. (2016). Decision {Making} and {Sequential} {Sampling} from {Memory}. \emph{Neuron}, \emph{90}(5), 927--939. \url{https://doi.org/10.1016/j.neuron.2016.04.036}
 
 \leavevmode\vadjust pre{\hypertarget{ref-shore_social_2013}{}}%
 Shore, D. M., \& Heerey, E. A. (2013). Do social utility judgments influence attentional processing? \emph{Cognition}, \emph{129}(1), 114--122. \url{https://doi.org/10.1016/j.cognition.2013.06.011}
